fixed common db

--- a/home.html
+++ b/home.html
@@ -26,7 +26,7 @@
     </ul>
     <button id="signOut">Sign Out</button>
     <br><br>
-    <button id="deleteBtn">Delete</button>
+    <button id="deleteBtn">Delete Account</button>
 </body> 
 
 <script src="home.js" type="module"></script>
